--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CineWeb - Ver Películas Online</title>
+    <title>Cine-Bot - Ver y Descargar Películas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,30 +13,127 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <i class="fas fa-film"></i>
-                <span>CineWeb</span>
+                <i class="fas fa-robot"></i>
+                <span>Cine-Bot</span>
             </div>
-            <div class="search-bar">
-                <input type="text" id="searchInput" placeholder="Buscar películas...">
-                <button id="searchBtn"><i class="fas fa-search"></i></button>
+            <div class="nav-links" id="navLinks">
+                <a href="#" class="nav-link active" data-target="inicio">
+                    <i class="fas fa-home"></i> Inicio
+                </a>
+                <a href="#" class="nav-link" data-target="catalogo">
+                    <i class="fas fa-list"></i> Catálogo
+                </a>
+                <a href="#" class="nav-link" data-target="recientes">
+                    <i class="fas fa-clock"></i> Recientes
+                </a>
             </div>
-            <div class="nav-links">
-                <a href="#inicio">Inicio</a>
-                <a href="#catalogo">Catálogo</a>
-                <a href="#recientes">Recientes</a>
+            <div class="search-container">
+                <div class="search-bar">
+                    <input type="text" id="searchInput" placeholder="Buscar películas...">
+                    <button id="searchBtn"><i class="fas fa-search"></i></button>
+                </div>
+                <div class="search-suggestions" id="searchSuggestions">
+                    <!-- Sugerencias aparecen aquí -->
+                </div>
             </div>
+            <button class="back-to-catalog" id="backToCatalog" style="display: none;">
+                <i class="fas fa-arrow-left"></i> Volver al Catálogo
+            </button>
         </div>
     </nav>
 
-    <!-- Reproductor Principal -->
-    <main class="main-content">
-        <section class="player-section">
-            <div class="video-container">
-                <video id="moviePlayer" controls>
-                    <source id="videoSource" src="" type="video/mp4">
-                    Tu navegador no soporta el elemento de video.
-                </video>
-                
+    <!-- Pantalla de Catálogo -->
+    <div id="catalogScreen">
+        <!-- Sección Inicio -->
+        <section id="inicio" class="catalog-section active">
+            <div class="hero-section">
+                <h1>Bienvenido a Cine-Bot</h1>
+                <p>Tu plataforma gratuita para ver y descargar películas</p>
+                <div class="hero-stats">
+                    <div class="stat">
+                        <i class="fas fa-film"></i>
+                        <span id="totalMovies">0</span>
+                        <p>Películas</p>
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-download"></i>
+                        <span id="totalDownloads">0</span>
+                        <p>Descargas</p>
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-users"></i>
+                        <span id="activeUsers">0</span>
+                        <p>Usuarios</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="featured-section">
+                <h2><i class="fas fa-fire"></i> Películas Destacadas</h2>
+                <div class="featured-grid" id="featuredMovies">
+                    <!-- Películas destacadas se cargan aquí -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Sección Catálogo -->
+        <section id="catalogo" class="catalog-section">
+            <div class="catalog-header">
+                <h2><i class="fas fa-layer-group"></i> Catálogo Completo</h2>
+                <div class="sort-options">
+                    <select id="sortSelect">
+                        <option value="recientes">Más Recientes</option>
+                        <option value="viejas">Más Antiguas</option>
+                        <option value="rating">Mejor Valoradas</option>
+                        <option value="nombre">A-Z</option>
+                    </select>
+                </div>
+            </div>
+            <div class="filter-buttons">
+                <button class="filter-btn active" data-filter="all">Todas</button>
+                <button class="filter-btn" data-filter="accion">Acción</button>
+                <button class="filter-btn" data-filter="drama">Drama</button>
+                <button class="filter-btn" data-filter="comedia">Comedia</button>
+                <button class="filter-btn" data-filter="ciencia-ficcion">Ciencia Ficción</button>
+                <button class="filter-btn" data-filter="terror">Terror</button>
+                <button class="filter-btn" data-filter="animacion">Animación</button>
+            </div>
+            <div class="movies-grid" id="catalogGrid">
+                <!-- Películas del catálogo se cargan aquí -->
+            </div>
+            <div class="load-more-container">
+                <button id="loadMoreBtn" class="load-more-btn">
+                    <i class="fas fa-plus"></i> Cargar Más Películas
+                </button>
+            </div>
+        </section>
+
+        <!-- Sección Recientes -->
+        <section id="recientes" class="catalog-section">
+            <div class="recent-header">
+                <h2><i class="fas fa-history"></i> Agregadas Recientemente</h2>
+                <div class="time-filter">
+                    <button class="time-btn active" data-time="7d">Última semana</button>
+                    <button class="time-btn" data-time="30d">Último mes</button>
+                    <button class="time-btn" data-time="90d">Últimos 3 meses</button>
+                </div>
+            </div>
+            <div class="movies-grid" id="recentMovies">
+                <!-- Películas recientes se cargan aquí -->
+            </div>
+        </section>
+    </div>
+
+    <!-- Pantalla de Detalle -->
+    <div id="detailScreen" class="detail-screen">
+        <div class="detail-container">
+            <div class="movie-player-section">
+                <div class="video-container">
+                    <video id="moviePlayer" controls>
+                        <source id="videoSource" src="" type="video/mp4">
+                        Tu navegador no soporta el elemento de video.
+                    </video>
+                </div>
                 <div class="player-controls">
                     <button id="playBtn" class="control-btn">
                         <i class="fas fa-play"></i>
@@ -54,56 +151,59 @@
                     <button id="smallScreenBtn" class="control-btn">
                         <i class="fas fa-compress"></i>
                     </button>
-                    <a id="downloadBtn" class="control-btn download-btn" download>
-                        <i class="fas fa-download"></i>
-                    </a>
+                    <button id="downloadBtn" class="control-btn download-btn">
+                        <i class="fas fa-download"></i> Descargar
+                    </button>
                     <div class="time-display">
                         <span id="currentTime">00:00</span> / 
                         <span id="duration">00:00</span>
                     </div>
                 </div>
             </div>
-            
-            <div class="movie-info">
-                <h2 id="movieTitle">Selecciona una película</h2>
-                <p id="movieDescription">Elige una película del catálogo para comenzar a verla</p>
+            <div class="movie-details">
+                <h2 id="detailTitle">Título de la Película</h2>
+                <p id="detailDescription">Descripción de la película.</p>
                 <div class="movie-meta">
-                    <span class="genre" id="movieGenre">-</span>
-                    <span class="year" id="movieYear">-</span>
-                    <span class="rating" id="movieRating">-</span>
+                    <span class="genre" id="detailGenre">-</span>
+                    <span class="year" id="detailYear">-</span>
+                    <span class="rating" id="detailRating">-</span>
+                    <span class="duration" id="detailDuration">-</span>
+                </div>
+                <div class="movie-actions">
+                    <button class="action-btn watch-btn" id="watchTrailerBtn">
+                        <i class="fas fa-play-circle"></i> Ver Tráiler
+                    </button>
+                    <button class="action-btn favorite-btn" id="favoriteBtn">
+                        <i class="far fa-heart"></i> Favorito
+                    </button>
+                    <button class="action-btn share-btn" id="shareBtn">
+                        <i class="fas fa-share-alt"></i> Compartir
+                    </button>
                 </div>
             </div>
-        </section>
-
-        <!-- Catálogo de Películas -->
-        <section class="catalog-section">
-            <h2><i class="fas fa-list"></i> Catálogo de Películas</h2>
-            <div class="filter-buttons">
-                <button class="filter-btn active" data-filter="all">Todas</button>
-                <button class="filter-btn" data-filter="accion">Acción</button>
-                <button class="filter-btn" data-filter="drama">Drama</button>
-                <button class="filter-btn" data-filter="comedia">Comedia</button>
-                <button class="filter-btn" data-filter="ciencia-ficcion">Ciencia Ficción</button>
+            <div class="suggestions-section">
+                <h3><i class="fas fa-film"></i> Películas Sugeridas</h3>
+                <div class="suggestions-grid" id="suggestionsGrid">
+                    <!-- Películas sugeridas se cargan aquí -->
+                </div>
             </div>
-            <div class="movies-grid" id="moviesGrid">
-                <!-- Las películas se cargarán aquí con JavaScript -->
-            </div>
-        </section>
-    </main>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>CineWeb - Plataforma de streaming gratuita</p>
+            <p>Cine-Bot - Plataforma de streaming gratuita</p>
             <p>© 2024 - Alojado en GitHub Pages</p>
             <div class="footer-links">
-                <a href="#" onclick="showAbout()">Acerca de</a>
-                <a href="#" onclick="showHelp()">Ayuda</a>
+                <a href="#" id="aboutBtn">Acerca de</a>
+                <a href="#" id="helpBtn">Ayuda</a>
+                <a href="#" id="contactBtn">Contacto</a>
             </div>
         </div>
     </footer>
 
-    <!-- Modal de Información -->
+    <!-- Modal para Acerca de, Ayuda, etc. -->
     <div id="infoModal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
